--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,27 +1,22 @@
 {
   "home": {
-    "subtitle": "Your Best Version",
-    "tools_header": "AI TOOLS",
+    "subtitle": "Your Dream Home",
+    "tools_header": "DESIGN TOOLS",
     "swipe": "Swipe ->",
-    "gallery_header": "YOUR CREATIONS",
+    "gallery_header": "YOUR DESIGNS",
     "see_all": "See all",
     "example_tag": "Example",
-    "empty_gallery": "Your future masterpieces will appear here.",
+    "empty_gallery": "Your future designs will appear here.",
     "nav_shop": "Shop",
     "nav_profile": "Profile",
     "alert_home_title": "Home",
     "alert_home_msg": "You are already on the home screen"
   },
   "tools": {
-    "styletransfer": { "title": "Style Transfer", "subtitle": "Apply a Style From Reference Image" },
-    "stylist": { "title": "Change your Style", "subtitle": "Your vibe your style" },
-    "hairstudio": { "title": "Hair Studio", "subtitle": "Try new colors and cuts" },
-    "fitness": { "title": "Fitness Body", "subtitle": "Your most athletic version" },
-    "glowup": { "title": "Glow Up", "subtitle": "Natural aesthetic improvement" },
-    "luxury": { "title": "Luxury Flex", "subtitle": "Millionaire lifestyle" },
-    "socials": { "title": "Socials Saver", "subtitle": "Attractive casual photos" },
-    "globetrotter": { "title": "Globetrotter", "subtitle": "Travel the world" },
-    "headshot": { "title": "Instant Headshot", "subtitle": "Professional LinkedIn photo" },
+    "interiordesign": { "title": "Interior Design", "subtitle": "Redesign your space" },
+    "exteriordesign": { "title": "Exterior Design", "subtitle": "Renovate your facade" },
+    "gardendesign": { "title": "Garden Design", "subtitle": "Create your perfect landscape" },
+    "styletransfer": { "title": "Style Transfer", "subtitle": "Apply a style from a photo" },
     "start_btn": "Start"
   },
   "common": {
@@ -35,7 +30,7 @@
     "error_connection": "Connection failed.",
     "permission_denied": "Permission denied",
     "saved": "Saved",
-    "saved_msg_album": "Photo saved to 'Aura AI' album.",
+    "saved_msg_album": "Photo saved to 'LoveYourHome' album.",
     "saved_msg": "Image saved.",
     "share_error": "Could not share.",
     "ia_generated": "AI GENERATED",
@@ -55,7 +50,7 @@
     "go_store": "Go to Store"
   },
   "generic_tool": {
-    "result_title": "Your New Look!",
+    "result_title": "Your New Design!",
     "try_again": "Try again",
     "photo_selected": "Photo selected",
     "ready_process": "Ready to process.",
@@ -63,48 +58,54 @@
     "generate_btn": "Generate with AI"
   },
   "styletransfer_tool": {
-    "result_title": "Outfit Tested!",
+    "result_title": "Style Applied!",
     "try_another": "Try another",
-    "step_1": "1. Upload your photo",
-    "step_2": "2. Clothing photo",
-    "user_photo": "Your Photo",
-    "outfit_photo": "The Outfit",
-    "btn_processing": "Trying on clothes...",
-    "btn_ready": "Generate Virtual Try On",
+    "step_1": "1. Your Space",
+    "step_2": "2. Style Reference",
+    "user_photo": "Your Space",
+    "outfit_photo": "Style Ref",
+    "btn_processing": "Applying style...",
+    "btn_ready": "Transfer Style",
     "btn_not_ready": "Upload both photos"
   },
-  "options": {
-    "urban": "Urban",
-    "rock": "Rocker",
-    "cyberpunk": "Cyberpunk",
-    "viking": "Viking",
-    "retro": "Retro",
-    "shredded": "Shredded",
-    "yoga": "Yoga / Toned",
-    "butterfly": "Butterfly Cut",
-    "layer": "Layered",
-    "bob": "Bob Cut",
-    "mullet": "Modern Mullet",
-    "fade": "Taper Fade",
-    "buzzcut": "Buzz Cut",
-    "blonde": "Platinum Blonde",
-    "red": "Redhead",
-    "dark": "Dark Hair",
-    "balayage": "Balayage",
-    "santorini": "Santorini",
-    "paris": "Paris",
-    "nyc": "New York"
+  "wizard": {
+    "step_room_title": "Choose room type",
+    "step_style_title": "Choose visual style",
+    "step_house_title": "Choose house type",
+    "step_facade_title": "Choose facade style"
+  },
+  "rooms": {
+    "living": "Living Room",
+    "bedroom": "Bedroom",
+    "kitchen": "Kitchen",
+    "bathroom": "Bathroom",
+    "office": "Office"
+  },
+  "houses": {
+    "modern_home": "Modern Home",
+    "villa": "Villa",
+    "cottage": "Cottage",
+    "bungalow": "Bungalow",
+    "mansion": "Mansion"
+  },
+  "styles": {
+    "modern": "Modern",
+    "industrial": "Industrial",
+    "mediterranean": "Mediterranean",
+    "scandinavian": "Scandinavian",
+    "farmhouse": "Farmhouse",
+    "boho": "Bohemian",
+    "luxury": "Luxury",
+    "minimalist": "Minimalist",
+    "zen": "Zen Garden",
+    "tropical": "Tropical",
+    "english": "English Garden"
   },
   "feature_descriptions": {
-    "styletransfer": "Visualize how a style you love would look on your space.",
-    "stylist": "Choose your style and let AI design your outfit.",
-    "hairstudio": "Try a new look without going to the salon.",
-    "fitness": "Visualize your best physical version.",
-    "glowup": "You, but on your best day.",
-    "luxury": "Travel in a private jet or yacht without leaving home.",
-    "socials": "Boost your networks with profile photos that look natural.",
-    "globetrotter": "Travel to the most iconic places in the world.",
-    "headshot": "Your professional LinkedIn photo in seconds."
+    "interiordesign": "Transform any room in your house with a new style.",
+    "exteriordesign": "Give your home's facade a complete makeover.",
+    "gardendesign": "Design the garden of your dreams in seconds.",
+    "styletransfer": "Apply the style of any photo to your own room."
   },
   "legal": {
     "terms_title": "Terms of Service",
@@ -112,99 +113,77 @@
     "last_updated": "Last Updated: November 28, 2025",
     "data_secure": "Your Data is Secure",
     "company_name": "ADSEGOM LTD",
-    "app_name": "Aura AI",
-    "contact_email": "info@aura-ai.com",
+    "app_name": "Love Your Home",
+    "contact_email": "info@loveyourhome.app",
     "terms": {
-      "intro": "Welcome to <bold>{{appName}}</bold>, a mobile application operated by <bold>{{companyName}}</bold> ('Company', 'we', 'us', 'our'). These Terms of Service (the 'Legal Terms') govern your access to and use of the App. By using the Services, you agree to be bound by these Legal Terms.",
-      "section_1_title": "1. Agreement to Terms and Eligibility",
-      "section_1_text": "The App is intended for users who are at least 18 years old. Persons under the age of 18 are not permitted to use or register for the Services.",
+      "intro": "Welcome to <bold>{{appName}}</bold>. These Terms of Service govern your use of the App.",
+      "section_1_title": "1. Agreement",
+      "section_1_text": "By using the app, you agree to these terms.",
       "user_representations": "User Representations:",
       "user_rep_list": [
-        "You have the legal capacity and agree to comply with these Legal Terms.",
-        "You are not a minor in the jurisdiction in which you reside.",
-        "You will not access the Services through automated or non-human means (bots, scripts).",
-        "You will not use the Services for any illegal or unauthorized purpose."
+        "You are 18+ years old.",
+        "You will not use the app for illegal purposes."
       ],
-      "section_2_title": "2. Description of Our Services and AI Disclaimer",
-      "section_2_text": "Aura AI is an AI-powered photo editor designed to generate AI avatars, virtual try-ons, and style transformations. The App allows users to upload photos to receive AI-generated content.",
-      "ai_disclaimer_title": "IMPORTANT AI DISCLAIMER:",
-      "ai_disclaimer_text": "The content generated is powered by Artificial Intelligence. The AI may make mistakes or 'hallucinate'. We do not guarantee accuracy. You are responsible for reviewing generated images.",
-      "section_3_title": "3. Purchases and Subscriptions",
-      "section_3_payments": "Payments: You agree to provide current, complete, and accurate purchase information. Transactions are processed by the respective app store.",
-      "section_3_subs": "Subscriptions: Subscriptions automatically renew unless canceled at least 24 hours before the end of the current period.",
-      "section_3_refunds": "Cancellation and Refunds: All purchases are non-refundable. Refund requests must be made through Apple or Google.",
-      "section_4_title": "4. Intellectual Property Rights",
-      "section_4_text": "We own all intellectual property rights in our Services. We grant you a revocable, non-exclusive, limited right to install and use the Application.",
-      "section_5_title": "5. User-Generated Contributions",
-      "section_5_text": "By posting Contributions (photos), you grant us a right to host, use, and process them for the purpose of providing the AI generation services. You warrant that your Contributions do not infringe any third-party rights.",
+      "section_2_title": "2. AI Disclaimer",
+      "section_2_text": "AI generated content may contain errors. Use for visualization purposes only.",
+      "ai_disclaimer_title": "AI DISCLAIMER:",
+      "ai_disclaimer_text": "Designs are generated by AI and may not be structurally feasible. Consult an architect.",
+      "section_3_title": "3. Purchases",
+      "section_3_payments": "Payments are processed via App Store / Play Store.",
+      "section_3_subs": "Subscriptions renew automatically.",
+      "section_3_refunds": "No refunds for used credits.",
+      "section_4_title": "4. Intellectual Property",
+      "section_4_text": "We own the app code and assets.",
+      "section_5_title": "5. User Content",
+      "section_5_text": "You retain rights to your photos, granting us license to process them.",
       "section_6_title": "6. Prohibited Activities",
-      "section_6_list": [
-        "Systematically retrieve data to create databases.",
-        "Trick, defraud, or mislead other users.",
-        "Upload viruses or harmful material.",
-        "Use the Services to generate NSFW or illegal content."
-      ],
-      "section_7_title": "7. Third-Party Content",
-      "section_7_text": "The Services may contain links to third-party websites. We do not investigate or monitor these Third-Party Contents.",
+      "section_6_list": ["Do not reverse engineer.", "Do not harass others."],
+      "section_7_title": "7. Third Party",
+      "section_7_text": "Links to other sites are not our responsibility.",
       "section_8_title": "8. Termination",
-      "section_8_text": "We reserve the right to deny access to the Services for any reason, including breach of these Legal Terms.",
+      "section_8_text": "We may ban users violating terms.",
       "section_9_title": "9. Modifications",
-      "section_9_text": "We reserve the right to change or remove the contents of the Services at any time.",
-      "section_10_title": "10. Disclaimer of Warranties",
-      "section_10_text": "THE SERVICES ARE PROVIDED ON AN 'AS IS' AND 'AS AVAILABLE' BASIS. YOUR USE OF THE SERVICES WILL BE AT YOUR SOLE RISK.",
-      "section_11_title": "11. Limitations of Liability",
-      "section_11_text": "IN NO EVENT WILL WE BE LIABLE FOR ANY DIRECT, INDIRECT, CONSEQUENTIAL, EXEMPLARY, INCIDENTAL, SPECIAL, OR PUNITIVE DAMAGES.",
+      "section_9_text": "Terms may change.",
+      "section_10_title": "10. Warranty",
+      "section_10_text": "App provided AS IS.",
+      "section_11_title": "11. Liability",
+      "section_11_text": "We are not liable for damages.",
       "section_12_title": "12. Indemnification",
-      "section_12_text": "You agree to defend, indemnify, and hold us harmless from any loss, damage, liability, claim, or demand.",
-      "section_13_title": "13. Privacy Policy and User Data",
-      "section_13_text": "We care about data privacy and security. Please review our Privacy Policy, which is incorporated into these Legal Terms.",
-      "section_14_title": "14. Electronic Communications",
-      "section_14_text": "You consent to receive electronic communications, and you agree that all agreements, notices, disclosures, and other communications we provide to you electronically satisfy any legal requirement.",
-      "section_15_title": "15. Governing Law",
-      "section_15_text": "These Legal Terms are governed by the laws of the State of Delaware (United States).",
-      "section_16_title": "16. Dispute Resolution",
-      "section_16_text": "Disputes will be resolved by binding arbitration in Delaware.",
-      "section_17_title": "17. Miscellaneous",
-      "section_17_text": "These Legal Terms constitute the entire agreement. If any provision is determined to be unlawful, that provision is deemed severable.",
-      "section_18_title": "18. Contact Us"
+      "section_12_text": "You agree to hold us harmless.",
+      "section_13_title": "13. Privacy",
+      "section_13_text": "See Privacy Policy.",
+      "section_14_title": "14. Comms",
+      "section_14_text": "Electronic comms accepted.",
+      "section_15_title": "15. Law",
+      "section_15_text": "Delaware Law.",
+      "section_16_title": "16. Disputes",
+      "section_16_text": "Arbitration.",
+      "section_17_title": "17. Misc",
+      "section_17_text": "Misc terms.",
+      "section_18_title": "18. Contact"
     },
     "privacy": {
-      "intro": "This Privacy Policy explains how <bold>{{companyName}}</bold> collects, uses, and discloses information about you when you use <bold>{{appName}}</bold>.",
-      "section_1_title": "1. Information We Collect",
-      "section_1_a": "a. Information You Provide",
-      "section_1_a_list": [
-        "Account Information: Name and email (managed by third-party auth).",
-        "User Content: Photos you upload for AI processing."
-      ],
-      "section_1_b": "b. Information Collected Automatically",
-      "section_1_b_list": [
-        "Usage Data: Features used, frequency.",
-        "Device Information: Model, OS version."
-      ],
-      "section_2_title": "2. How We Use Your Information",
-      "section_2_list": [
-        "Provide and improve the App.",
-        "Process AI Requests (generate avatars, styles).",
-        "Manage accounts and subscriptions.",
-        "Respond to support requests."
-      ],
-      "section_3_title": "3. How We Share Your Information",
-      "section_3_text": "We do not sell your personal data. We share data only with AI Providers (for processing), Backend Infrastructure (for storage), and for Legal Requirements.",
-      "section_4_title": "4. Image Processing & Retention",
-      "section_4_list": [
-        "Images are converted and sent to AI providers securely.",
-        "We do NOT permanently store your source images after processing.",
-        "We retain account info while active."
-      ],
-      "section_5_title": "5. Data Security",
-      "section_5_text": "We use industry-standard security measures. However, no internet transmission is 100% secure.",
-      "section_6_title": "6. Deletion of Data",
-      "section_6_text": "You may request deletion of your account and data within the app or by contacting us.",
-      "section_7_title": "7. Children's Privacy",
-      "section_7_text": "The App is not intended for children under 18. We do not knowingly collect info from children.",
-      "section_8_title": "8. Changes to Policy",
-      "section_8_text": "We may update this policy. We will notify you of changes.",
-      "section_9_title": "9. Contact Us"
+      "intro": "Privacy Policy for <bold>{{appName}}</bold>.",
+      "section_1_title": "1. Collection",
+      "section_1_a": "Information you provide",
+      "section_1_a_list": ["Photos", "Email"],
+      "section_1_b": "Auto collected",
+      "section_1_b_list": ["Usage data"],
+      "section_2_title": "2. Use",
+      "section_2_list": ["Service provision", "Improvement"],
+      "section_3_title": "3. Sharing",
+      "section_3_text": "Only with AI providers for processing.",
+      "section_4_title": "4. Retention",
+      "section_4_list": ["Source photos deleted after processing."],
+      "section_5_title": "5. Security",
+      "section_5_text": "Standard measures applied.",
+      "section_6_title": "6. Deletion",
+      "section_6_text": "Request via app.",
+      "section_7_title": "7. Children",
+      "section_7_text": "Not for under 18.",
+      "section_8_title": "8. Changes",
+      "section_8_text": "Updates notified.",
+      "section_9_title": "9. Contact"
     }
   },
   "profile": {
@@ -218,7 +197,7 @@
     "plan_premium": "Premium",
     "plan_standard": "Standard",
     "credits_label": "credits",
-    "generated": "Generated",
+    "generated": "Designs",
     "manage_sub": "Manage Subscription",
     "manage_sub_desc": "Billing and plans",
     "upgrade": "Upgrade Plan",
@@ -227,7 +206,7 @@
     "privacy": "Privacy Policy",
     "terms": "Terms of Service",
     "support": "Help & Support",
-    "subject": "Aura AI Support",
+    "subject": "App Support",
     "delete_account": "Delete Account",
     "delete_confirm": "Are you sure? You will lose all your credits and purchase history. This action cannot be undone.",
     "account_deleted_title": "Account Deleted",
@@ -236,16 +215,16 @@
     "error_mail": "Could not open mail app."
   },
   "report": {
-  "button": "Report",
-  "title": "Report Content",
-  "msg": "If this image is inappropriate or offensive, please report it. Our team will review it.",
-  "reason_nsfw": "NSFW",
-  "reason_offensive": "Offensive / Hate",
-  "reason_other": "Other",
-  "success_title": "Report Sent",
-  "success_msg": "Thanks for your report. We have hidden the content and will review it shortly.",
-  "block_msg": "Content hidden due to report."
-},
+    "button": "Report",
+    "title": "Report Content",
+    "msg": "If this image is inappropriate, please report it.",
+    "reason_nsfw": "NSFW",
+    "reason_offensive": "Offensive",
+    "reason_other": "Other",
+    "success_title": "Report Sent",
+    "success_msg": "Thanks for your report.",
+    "block_msg": "Content hidden."
+  },
   "errors": {
     "user_id_missing": "User ID not found.",
     "no_image_returned": "The cloud did not return any image."
