--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -1,27 +1,22 @@
 {
   "home": {
-    "subtitle": "Sua Melhor Versão",
-    "tools_header": "FERRAMENTAS IA",
+    "subtitle": "Sua Casa dos Sonhos",
+    "tools_header": "FERRAMENTAS DE DESIGN",
     "swipe": "Deslize ->",
-    "gallery_header": "SUAS CRIAÇÕES",
+    "gallery_header": "SEUS PROJETOS",
     "see_all": "Ver tudo",
     "example_tag": "Exemplo",
-    "empty_gallery": "Suas futuras obras-primas aparecerão aqui.",
+    "empty_gallery": "Seus futuros projetos aparecerão aqui.",
     "nav_shop": "Loja",
     "nav_profile": "Perfil",
     "alert_home_title": "Início",
     "alert_home_msg": "Você já está na tela inicial"
   },
   "tools": {
-    "tryon": { "title": "Provador Virtual", "subtitle": "Prove qualquer roupa" },
-    "stylist": { "title": "Mude seu Estilo", "subtitle": "Sua vibe, seu estilo" },
-    "hairstudio": { "title": "Estúdio Capilar", "subtitle": "Novas cores e cortes" },
-    "fitness": { "title": "Corpo Fitness", "subtitle": "Sua versão mais atlética" },
-    "glowup": { "title": "Glow Up", "subtitle": "Melhoria estética natural" },
-    "luxury": { "title": "Vida de Luxo", "subtitle": "Estilo de vida milionário" },
-    "socials": { "title": "Socials Saver", "subtitle": "Fotos casuais atraentes" },
-    "globetrotter": { "title": "Viajante", "subtitle": "Viaje pelo mundo" },
-    "headshot": { "title": "Foto Profissional", "subtitle": "Foto para LinkedIn" },
+    "interiordesign": { "title": "Design de Interiores", "subtitle": "Redesenhe seu espaço" },
+    "exteriordesign": { "title": "Design Exterior", "subtitle": "Renove sua fachada" },
+    "gardendesign": { "title": "Design de Jardins", "subtitle": "Crie sua paisagem perfeita" },
+    "styletransfer": { "title": "Transferência de Estilo", "subtitle": "Aplique um estilo de uma foto" },
     "start_btn": "Começar"
   },
   "common": {
@@ -34,7 +29,7 @@
     "error_connection": "Falha na conexão.",
     "permission_denied": "Permissão negada",
     "saved": "Salvo",
-    "saved_msg_album": "Foto salva no álbum 'Aura AI'.",
+    "saved_msg_album": "Foto salva no álbum 'LoveYourHome'.",
     "saved_msg": "Imagem salva.",
     "share_error": "Não foi possível compartilhar.",
     "ia_generated": "GERADO POR IA",
@@ -51,60 +46,66 @@
     "select_image": "Selecionar Imagem",
     "choose_source": "Escolha a origem",
     "insufficient_title": "Créditos Insuficientes",
-    "insufficient_msg": "Você não tem créditos suficientes para gerar esta imagem.",
+    "insufficient_msg": "Você não tem créditos suficientes para gerar este projeto.",
     "go_store": "Ir para a Loja"
   },
   "generic_tool": {
-    "result_title": "Seu Novo Visual!",
+    "result_title": "Seu Novo Projeto!",
     "try_again": "Tentar novamente",
     "photo_selected": "Foto selecionada",
     "ready_process": "Pronto para processar.",
     "choose_style": "Escolha um estilo",
     "generate_btn": "Gerar com IA"
   },
-  "tryon_tool": {
-    "result_title": "Outfit Provado!",
-    "try_another": "Provar outro",
-    "step_1": "1. Sua foto",
-    "step_2": "2. Foto da roupa",
-    "user_photo": "Sua Foto",
-    "outfit_photo": "A Roupa",
-    "btn_processing": "Provando roupa...",
-    "btn_ready": "Gerar Provador Virtual",
+  "styletransfer_tool": {
+    "result_title": "Estilo Aplicado!",
+    "try_another": "Tentar outro",
+    "step_1": "1. Seu Espaço",
+    "step_2": "2. Referência de Estilo",
+    "user_photo": "Seu Espaço",
+    "outfit_photo": "Referência",
+    "btn_processing": "Aplicando estilo...",
+    "btn_ready": "Transferir Estilo",
     "btn_not_ready": "Envie ambas as fotos"
   },
-  "options": {
-    "urban": "Urbano",
-    "rock": "Roqueiro",
-    "cyberpunk": "Cyberpunk",
-    "viking": "Viking",
-    "retro": "Retrô",
-    "shredded": "Definido",
-    "yoga": "Yoga / Tonificado",
-    "butterfly": "Corte Borboleta",
-    "layer": "Em Camadas",
-    "bob": "Corte Bob",
-    "mullet": "Mullet Moderno",
-    "fade": "Degradê",
-    "buzzcut": "Raspado",
-    "blonde": "Loiro Platinado",
-    "red": "Ruivo",
-    "dark": "Cabelo Escuro",
-    "balayage": "Balayage",
-    "santorini": "Santorini",
-    "paris": "Paris",
-    "nyc": "Nova York"
+  "wizard": {
+    "step_room_title": "Escolha o tipo de cômodo",
+    "step_style_title": "Escolha o estilo visual",
+    "step_house_title": "Escolha o tipo de casa",
+    "step_facade_title": "Escolha o estilo da fachada"
+  },
+  "rooms": {
+    "living": "Sala de Estar",
+    "bedroom": "Quarto",
+    "kitchen": "Cozinha",
+    "bathroom": "Banheiro",
+    "office": "Escritório"
+  },
+  "houses": {
+    "modern_home": "Casa Moderna",
+    "villa": "Villa",
+    "cottage": "Chalé",
+    "bungalow": "Bangalô",
+    "mansion": "Mansão"
+  },
+  "styles": {
+    "modern": "Moderno",
+    "industrial": "Industrial",
+    "mediterranean": "Mediterrâneo",
+    "scandinavian": "Escandinavo",
+    "farmhouse": "Casa de Campo",
+    "boho": "Boêmio",
+    "luxury": "Luxo",
+    "minimalist": "Minimalista",
+    "zen": "Jardim Zen",
+    "tropical": "Tropical",
+    "english": "Jardim Inglês"
   },
   "feature_descriptions": {
-    "tryon": "Visualize como qualquer roupa fica em você antes de comprar.",
-    "stylist": "Escolha seu estilo e deixe a IA desenhar seu outfit.",
-    "hairstudio": "Experimente um novo visual sem ir ao cabeleireiro.",
-    "fitness": "Visualize sua melhor versão física.",
-    "glowup": "Você, mas no seu melhor dia.",
-    "luxury": "Viaje em um jato particular ou iate sem sair de casa.",
-    "socials": "Potencialize suas redes com fotos de perfil naturais.",
-    "globetrotter": "Viaje para os lugares mais icônicos do mundo.",
-    "headshot": "Sua foto profissional para LinkedIn em segundos."
+    "interiordesign": "Transforme qualquer cômodo da sua casa com um novo estilo.",
+    "exteriordesign": "Dê uma repaginada completa na fachada da sua casa.",
+    "gardendesign": "Projete o jardim dos seus sonhos em segundos.",
+    "styletransfer": "Aplique o estilo de qualquer foto da internet ao seu próprio cômodo."
   },
   "legal": {
     "terms_title": "Termos de Serviço",
@@ -112,104 +113,82 @@
     "last_updated": "Última atualização: 28 de Novembro, 2025",
     "data_secure": "Seus dados estão seguros",
     "company_name": "ADSEGOM LTD",
-    "app_name": "Aura AI",
-    "contact_email": "info@aura-ai.com",
+    "app_name": "Love Your Home",
+    "contact_email": "info@loveyourhome.app",
     "terms": {
-      "intro": "Bem-vindo ao <bold>{{appName}}</bold>, um aplicativo móvel operado pela <bold>{{companyName}}</bold> ('Empresa', 'nós'). Estes Termos de Serviço regem seu acesso e uso do App. Ao usar os Serviços, você concorda em ficar vinculado a estes Termos Legais.",
-      "section_1_title": "1. Acordo de Termos e Elegibilidade",
-      "section_1_text": "O App destina-se a usuários com pelo menos 18 anos. Menores de 18 anos não têm permissão para usar ou registrar-se nos Serviços.",
-      "user_representations": "Declarações do Usuário:",
+      "intro": "Bem-vindo ao <bold>{{appName}}</bold>. Estes termos regem o uso do App.",
+      "section_1_title": "1. Acordo",
+      "section_1_text": "Ao usar o app, você concorda com estes termos.",
+      "user_representations": "Declarações:",
       "user_rep_list": [
-        "Você tem capacidade legal e concorda em cumprir estes Termos.",
-        "Você não é menor de idade na jurisdição em que reside.",
-        "Não acessará os Serviços por meios automatizados (bots, scripts).",
-        "Não usará os Serviços para qualquer finalidade ilegal ou não autorizada."
+        "Você tem 18+ anos.",
+        "Não usará o app para fins ilegais."
       ],
-      "section_2_title": "2. Descrição dos Serviços e Aviso de IA",
-      "section_2_text": "Aura AI é um editor de fotos com IA projetado para gerar avatares, provas virtuais e transformações de estilo. O App permite enviar fotos para receber conteúdo gerado por IA.",
-      "ai_disclaimer_title": "AVISO IMPORTANTE DE IA:",
-      "ai_disclaimer_text": "O conteúdo é gerado por Inteligência Artificial. A IA pode cometer erros ou 'alucinar'. Não garantimos a precisão. Você é responsável por revisar as imagens geradas.",
-      "section_3_title": "3. Compras e Assinaturas",
-      "section_3_payments": "Pagamentos: Você concorda em fornecer informações de compra atuais, completas e precisas. As transações são processadas pela respectiva loja de aplicativos.",
-      "section_3_subs": "Assinaturas: Renovam-se automaticamente, a menos que canceladas pelo menos 24 horas antes do final do período atual.",
-      "section_3_refunds": "Cancelamento e Reembolsos: Todas as compras são finais e não reembolsáveis. Solicitações de reembolso devem ser feitas via Apple ou Google.",
-      "section_4_title": "4. Direitos de Propriedade Intelectual",
-      "section_4_text": "Somos proprietários de todos os direitos de propriedade intelectual em nossos Serviços. Concedemos a você um direito limitado, revogável e não exclusivo para instalar e usar o Aplicativo.",
-      "section_5_title": "5. Contribuições do Usuário",
-      "section_5_text": "Ao postar Contribuições (fotos), você nos concede o direito de hospedá-las, usá-las e processá-las para fornecer os serviços de geração de IA. Você garante que suas Contribuições não infringem direitos de terceiros.",
-      "section_6_title": "6. Atividades Proibidas",
-      "section_6_list": [
-        "Recuperar sistematicamente dados para criar bancos de dados.",
-        "Enganar, fraudar ou induzir outros usuários ao erro.",
-        "Enviar vírus ou material prejudicial.",
-        "Usar os Serviços para gerar conteúdo NSFW ou ilegal."
-      ],
-      "section_7_title": "7. Conteúdo de Terceiros",
-      "section_7_text": "Os Serviços podem conter links para sites de terceiros. Não investigamos nem monitoramos esses conteúdos.",
+      "section_2_title": "2. Aviso de IA",
+      "section_2_text": "Conteúdo gerado é referencial.",
+      "ai_disclaimer_title": "AVISO IA:",
+      "ai_disclaimer_text": "Projetos são gerados por IA e podem não ser estruturalmente viáveis. Consulte um arquiteto.",
+      "section_3_title": "3. Compras",
+      "section_3_payments": "Processado pela App Store / Play Store.",
+      "section_3_subs": "Renovação automática.",
+      "section_3_refunds": "Sem reembolso para créditos usados.",
+      "section_4_title": "4. Propriedade Intelectual",
+      "section_4_text": "Somos donos do código.",
+      "section_5_title": "5. Conteúdo do Usuário",
+      "section_5_text": "Você mantém direitos sobre suas fotos.",
+      "section_6_title": "6. Proibições",
+      "section_6_list": ["Sem engenharia reversa.", "Sem assédio."],
+      "section_7_title": "7. Terceiros",
+      "section_7_text": "Links externos não são nossa responsabilidade.",
       "section_8_title": "8. Rescisão",
-      "section_8_text": "Reservamo-nos o direito de negar acesso aos Serviços por qualquer motivo, incluindo violação destes Termos.",
-      "section_9_title": "9. Modificações",
-      "section_9_text": "Reservamo-nos o direito de alterar ou remover o conteúdo dos Serviços a qualquer momento.",
-      "section_10_title": "10. Isenção de Garantias",
-      "section_10_text": "OS SERVIÇOS SÃO FORNECIDOS 'NO ESTADO EM QUE SE ENCONTRAM'. O USO DOS SERVIÇOS É POR SUA CONTA E RISCO.",
-      "section_11_title": "11. Limitações de Responsabilidade",
-      "section_11_text": "EM NENHUMA HIPÓTESE SEREMOS RESPONSÁVEIS POR QUAISQUER DANOS DIRETOS, INDIRETOS, CONSEQUENCIAIS OU PUNITIVOS.",
+      "section_8_text": "Podemos banir usuários.",
+      "section_9_title": "9. Alterações",
+      "section_9_text": "Termos podem mudar.",
+      "section_10_title": "10. Garantia",
+      "section_10_text": "App fornecido 'COMO ESTÁ'.",
+      "section_11_title": "11. Responsabilidade",
+      "section_11_text": "Não somos responsáveis por danos.",
       "section_12_title": "12. Indenização",
-      "section_12_text": "Você concorda em nos defender, indenizar e isentar de qualquer perda, dano ou responsabilidade.",
-      "section_13_title": "13. Política de Privacidade",
-      "section_13_text": "Preocupamo-nos com a privacidade dos dados. Reveja nossa Política de Privacidade, incorporada a estes Termos.",
-      "section_14_title": "14. Comunicações Eletrônicas",
-      "section_14_text": "Você concorda em receber comunicações eletrônicas e concorda que todos os acordos e avisos satisfazem qualquer requisito legal.",
-      "section_15_title": "15. Lei Aplicável",
-      "section_15_text": "Estes Termos são regidos pelas leis do Estado de Delaware (Estados Unidos).",
-      "section_16_title": "16. Resolução de Disputas",
-      "section_16_text": "Disputas serão resolvidas por arbitragem vinculativa em Delaware.",
-      "section_17_title": "17. Disposições Diversas",
-      "section_17_text": "Estes Termos constituem o acordo integral. Se alguma disposição for ilegal, será considerada separável.",
-      "section_18_title": "18. Contate-nos"
+      "section_12_text": "Você concorda em nos isentar.",
+      "section_13_title": "13. Privacidade",
+      "section_13_text": "Ver Política.",
+      "section_14_title": "14. Comunicações",
+      "section_14_text": "E-mails aceitos.",
+      "section_15_title": "15. Lei",
+      "section_15_text": "Lei de Delaware.",
+      "section_16_title": "16. Disputas",
+      "section_16_text": "Arbitragem.",
+      "section_17_title": "17. Diversos",
+      "section_17_text": "Termos gerais.",
+      "section_18_title": "18. Contato"
     },
     "privacy": {
-      "intro": "Esta Política de Privacidade explica como a <bold>{{companyName}}</bold> coleta, usa e divulga informações sobre você quando usa o <bold>{{appName}}</bold>.",
-      "section_1_title": "1. Informações que Coletamos",
-      "section_1_a": "a. Informações que Você Fornece",
-      "section_1_a_list": [
-        "Informações da Conta: Nome e e-mail (gerenciado por terceiros).",
-        "Conteúdo do Usuário: Fotos que você envia para processamento de IA."
-      ],
-      "section_1_b": "b. Informações Coletadas Automaticamente",
-      "section_1_b_list": [
-        "Dados de Uso: Recursos usados, frequência.",
-        "Informações do Dispositivo: Modelo, versão do SO."
-      ],
-      "section_2_title": "2. Como Usamos suas Informações",
-      "section_2_list": [
-        "Fornecer e melhorar o App.",
-        "Processar Solicitações de IA (gerar avatares, estilos).",
-        "Gerenciar contas e assinaturas.",
-        "Responder a solicitações de suporte."
-      ],
-      "section_3_title": "3. Como Compartilhamos suas Informações",
-      "section_3_text": "Não vendemos seus dados pessoais. Compartilhamos dados apenas com Provedores de IA (para processamento), Infraestrutura de Backend (armazenamento) e Requisitos Legales.",
-      "section_4_title": "4. Processamento e Retenção de Imagens",
-      "section_4_list": [
-        "As imagens são enviadas com segurança para provedores de IA.",
-        "NÃO armazenamos permanentemente suas imagens originais após o processamento.",
-        "Mantemos as informações da conta enquanto estiver ativa."
-      ],
-      "section_5_title": "5. Segurança de Dados",
-      "section_5_text": "Usamos medidas de segurança padrão da indústria. No entanto, nenhuma transmissão pela internet é 100% segura.",
-      "section_6_title": "6. Exclusão de Dados",
-      "section_6_text": "Você pode solicitar a exclusão de sua conta e dados dentro do app ou entrando em contato conosco.",
-      "section_7_title": "7. Privacidade de Crianças",
-      "section_7_text": "O App não se destina a menores de 18 anos. Não coletamos intencionalmente informações de crianças.",
-      "section_8_title": "8. Alterações na Política",
-      "section_8_text": "Podemos atualizar esta política. Notificaremos você sobre alterações.",
-      "section_9_title": "9. Contate-nos"
+      "intro": "Política de Privacidade para <bold>{{appName}}</bold>.",
+      "section_1_title": "1. Coleta",
+      "section_1_a": "Dados que você fornece",
+      "section_1_a_list": ["Fotos", "Email"],
+      "section_1_b": "Coleta automática",
+      "section_1_b_list": ["Dados de uso"],
+      "section_2_title": "2. Uso",
+      "section_2_list": ["Provisão de serviço", "Melhoria"],
+      "section_3_title": "3. Compartilhamento",
+      "section_3_text": "Apenas com provedores de IA.",
+      "section_4_title": "4. Retenção",
+      "section_4_list": ["Fotos fonte deletadas após processo."],
+      "section_5_title": "5. Segurança",
+      "section_5_text": "Medidas padrão aplicadas.",
+      "section_6_title": "6. Exclusão",
+      "section_6_text": "Solicitar no app.",
+      "section_7_title": "7. Crianças",
+      "section_7_text": "Não para menores de 18.",
+      "section_8_title": "8. Alterações",
+      "section_8_text": "Notificaremos atualizações.",
+      "section_9_title": "9. Contato"
     }
   },
   "profile": {
     "status_premium": "PREMIUM",
-    "status_free": "FREE",
+    "status_free": "GRÁTIS",
     "member_pro": "Membro Pro",
     "member_free": "Membro Gratuito",
     "credits": "Créditos",
@@ -218,7 +197,7 @@
     "plan_premium": "Premium",
     "plan_standard": "Padrão",
     "credits_label": "créditos",
-    "generated": "Geradas",
+    "generated": "Projetos",
     "manage_sub": "Gerenciar Assinatura",
     "manage_sub_desc": "Faturamento e planos",
     "upgrade": "Melhorar Plano (Upgrade)",
@@ -228,33 +207,33 @@
     "terms": "Termos de Serviço",
     "support": "Ajuda e Suporte",
     "delete_account": "Excluir Conta",
-    "delete_confirm": "Tem certeza? Você perderá todos os seus créditos e histórico de compras. Esta ação não pode ser desfeita.",
+    "delete_confirm": "Tem certeza? Você perderá todos os seus créditos. Esta ação não pode ser desfeita.",
     "account_deleted_title": "Conta Excluída",
-    "account_deleted_msg": "Os dados da sua conta foram removidos com sucesso.",
-    "delete_error": "Não foi possível excluir a conta. Tente novamente.",
-    "subject": "Suporte Aura AI",
-    "error_mail": "Não foi possível abrir o aplicativo de e-mail."
+    "account_deleted_msg": "Dados removidos.",
+    "delete_error": "Erro ao excluir. Tente novamente.",
+    "subject": "Suporte App",
+    "error_mail": "Não foi possível abrir o e-mail."
   },
   "report": {
-  "button": "Denunciar",
-  "title": "Denunciar Conteúdo",
-  "msg": "Se esta imagem for inapropriada ou ofensiva, por favor, denuncie. Nossa equipe irá analisá-la.",
-  "reason_nsfw": "Nudez / Conteúdo Sexual",
-  "reason_offensive": "Ofensivo / Ódio",
-  "reason_other": "Outro",
-  "success_title": "Denúncia Enviada",
-  "success_msg": "Obrigado pela denúncia. Ocultamos o conteúdo e iremos analisá-lo em breve.",
-  "block_msg": "Conteúdo oculto devido à denúncia."
-},
+    "button": "Denunciar",
+    "title": "Denunciar",
+    "msg": "Se inapropriado, denuncie.",
+    "reason_nsfw": "Inapropriado",
+    "reason_offensive": "Ofensivo",
+    "reason_other": "Outro",
+    "success_title": "Enviado",
+    "success_msg": "Obrigado.",
+    "block_msg": "Oculto."
+  },
   "errors": {
-    "user_id_missing": "ID do usuário não encontrado.",
-    "no_image_returned": "A nuvem não retornou nenhuma imagem."
+    "user_id_missing": "ID não encontrado.",
+    "no_image_returned": "Nenhuma imagem retornada."
   },
   "store": {
     "success_title": "Sucesso!",
-    "success_msg": "Sua compra foi realizada com sucesso.",
+    "success_msg": "Compra realizada.",
     "restore_title": "Restaurado",
-    "restore_msg": "Suas compras foram restauradas.",
-    "restore_error": "Não foi possível restaurar as compras. Tente novamente mais tarde."
+    "restore_msg": "Compras restauradas.",
+    "restore_error": "Erro ao restaurar."
   }
 }
