Funciones de accesibilidad mas

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -240,6 +240,14 @@
   "a11y": {
     "onboarding_next": "Go to next screen",
     "onboarding_claim": "Claim offer",
+    "tab_home": "Home Tab",
+    "tab_store": "Store Tab",
+    "tab_profile": "Profile Tab",
+    "credits_balance": "Credit balance: {{count}}",
+    "credits_hint": "Tap to buy more credits",
+    "open_tool": "Open tool {{title}}",
+    "gallery_image_index": "Gallery image number {{index}}",
+    "gallery_image_hint": "Tap to view full screen",
     "save_image": "Save image to gallery",
     "report_content": "Report content",
     "close_preview": "Close preview",
