--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -250,6 +250,14 @@
     "save_image": "Guardar imagen en galería",
     "report_content": "Reportar contenido",
     "close_preview": "Cerrar vista previa",
+    "tab_home": "Pestaña Inicio",
+    "tab_store": "Pestaña Tienda",
+    "tab_profile": "Pestaña Perfil",
+    "credits_balance": "Saldo de créditos: {{count}}",
+    "credits_hint": "Toca para comprar más créditos",
+    "open_tool": "Abrir herramienta {{title}}",
+    "gallery_image_index": "Imagen de galería número {{index}}",
+    "gallery_image_hint": "Toca para ver en pantalla completa",
     "go_back": "Volver atrás",
     "select_image_for": "Seleccionar imagen para {{label}}",
     "generate_design": "Generar diseño"
