--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -242,6 +242,14 @@
     "onboarding_claim": "Resgatar oferta",
     "save_image": "Salvar imagem na galeria",
     "report_content": "Denunciar conteúdo",
+    "tab_home": "Aba Início",
+    "tab_store": "Aba Loja",
+    "tab_profile": "Aba Perfil",
+    "credits_balance": "Saldo de créditos: {{count}}",
+    "credits_hint": "Toque para comprar mais créditos",
+    "open_tool": "Abrir ferramenta {{title}}",
+    "gallery_image_index": "Imagem da galeria número {{index}}",
+    "gallery_image_hint": "Toque para ver em tela cheia",
     "close_preview": "Fechar visualização",
     "go_back": "Voltar",
     "select_image_for": "Selecionar imagem para {{label}}",
