actualizacion de imagenes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -32,6 +32,7 @@
     "error_connection": "Connection failed.",
     "permission_denied": "Permission denied",
     "saved": "Saved",
+    "ok": "OK",
     "saved_msg_album": "Photo saved to 'LoveYourHome' album.",
     "saved_msg": "Image saved.",
     "share_error": "Could not share.",
@@ -48,6 +49,8 @@
     "select_image": "Select Image",
     "choose_source": "Choose source",
     "insufficient_title": "Insufficient Credits",
+    "welcome_title": "Welcome to Love Your Home!",
+    "welcome_gift_msg": "As a welcome gift, we've added 3 free credits to your account. Enjoy exploring Love Your Home!",
     "insufficient_msg": "You don't have enough credits to generate this image.",
     "go_store": "Go to Store"
   },
@@ -92,9 +95,10 @@
   },
   "styles": {
     "modern": "Modern",
-    "industrial": "Industrial",
+    "nordic": "Nordic",
     "mediterranean": "Mediterranean",
     "scandinavian": "Scandinavian",
+    "american": "American",
     "farmhouse": "Farmhouse",
     "boho": "Bohemian",
     "luxury": "Luxury",
@@ -116,7 +120,7 @@
     "data_secure": "Your Data is Secure",
     "company_name": "ADSEGOM LTD",
     "app_name": "Love Your Home",
-    "contact_email": "info@loveyourhome.app",
+    "contact_email": "info@rizzflows.com",
     "terms": {
       "intro": "Welcome to <bold>{{appName}}</bold>. These Terms of Service govern your use of the App.",
       "section_1_title": "1. Agreement",
@@ -246,6 +250,7 @@
     "credits_balance": "Credit balance: {{count}}",
     "credits_hint": "Tap to buy more credits",
     "open_tool": "Open tool {{title}}",
+    "upload_photo_hint": "Costs {{cost}} credits. Opens camera or gallery.",
     "gallery_image_index": "Gallery image number {{index}}",
     "gallery_image_hint": "Tap to view full screen",
     "save_image": "Save image to gallery",
@@ -272,6 +277,7 @@
     "slide2_title_accent": "Style",
     "slide2_text": "Explore styles and find your inspiration.",
     "style_nordic": "Nordic",
+    "style_american": "American",
     "style_modern": "Modern",
     "style_minimalist": "Minimalist",
     "slide3_title": "Your Exclusive",
