--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -37,6 +37,7 @@
     "ia_generated": "GERADO POR IA",
     "share": "Compartilhar",
     "save": "Salvar",
+    "ok": "OK",
     "delete": "Excluir",
     "cancel": "Cancelar",
     "popular": "POPULAR",
@@ -48,6 +49,8 @@
     "select_image": "Selecionar Imagem",
     "choose_source": "Escolha a origem",
     "insufficient_title": "Créditos Insuficientes",
+    "welcome_title": "Bem-vindo ao Love Your Home!",
+    "welcome_gift_msg": "Como presente de boas-vindas, adicionamos 3 créditos grátis à sua conta. Aproveite para explorar o Love Your Home!",
     "insufficient_msg": "Você não tem créditos suficientes para gerar este projeto.",
     "go_store": "Ir para a Loja"
   },
@@ -92,11 +95,12 @@
   },
   "styles": {
     "modern": "Moderno",
-    "industrial": "Industrial",
+    "nordic": "Nórdico",
     "mediterranean": "Mediterrâneo",
     "scandinavian": "Escandinavo",
     "farmhouse": "Casa de Campo",
     "boho": "Boêmio",
+    "american": "American",
     "luxury": "Luxo",
     "minimalist": "Minimalista",
     "zen": "Jardim Zen",
@@ -116,7 +120,7 @@
     "data_secure": "Seus dados estão seguros",
     "company_name": "ADSEGOM LTD",
     "app_name": "Love Your Home",
-    "contact_email": "info@loveyourhome.app",
+    "contact_email": "info@rizzflows.com",
     "terms": {
       "intro": "Bem-vindo ao <bold>{{appName}}</bold>. Estes termos regem o uso do App.",
       "section_1_title": "1. Acordo",
@@ -245,6 +249,7 @@
     "tab_home": "Aba Início",
     "tab_store": "Aba Loja",
     "tab_profile": "Aba Perfil",
+    "upload_photo_hint": "Custa {{cost}} créditos. Abre a câmera ou galeria.",
     "credits_balance": "Saldo de créditos: {{count}}",
     "credits_hint": "Toque para comprar mais créditos",
     "open_tool": "Abrir ferramenta {{title}}",
@@ -272,6 +277,7 @@
     "slide2_title_accent": "Estilo",
     "slide2_text": "Explore estilos e encontre sua inspiração.",
     "style_nordic": "Nórdico",
+    "style_american": "Americano",
     "style_modern": "Moderno",
     "style_minimalist": "Minimalista",
     "slide3_title": "Seu Presente",
