--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -116,80 +116,105 @@
   "legal": {
     "terms_title": "Términos de Servicio",
     "privacy_title": "Política de Privacidad",
-    "last_updated": "Última actualización: 28 de Noviembre, 2025",
+    "last_updated": "Última actualización: 21 de Diciembre, 2025",
     "data_secure": "Tus datos están seguros",
     "company_name": "ADSEGOM LTD",
     "app_name": "Love Your Home",
     "contact_email": "info@rizzflows.com",
     "terms": {
-      "intro": "Bienvenido a <bold>{{appName}}</bold>. Estos Términos rigen su uso de la App.",
-      "section_1_title": "1. Acuerdo",
-      "section_1_text": "Al usar la app, aceptas estos términos.",
-      "user_representations": "Declaraciones:",
+      "intro": "Bienvenido a Love Your Home, una aplicación móvil operada por ADSEGOM LTD ('Compañía', 'nosotros', 'nuestro'). Estos Términos de Servicio (los 'Términos Legales') rigen su acceso y uso de la Aplicación. Al utilizar los Servicios, usted acepta estar sujeto a estos Términos Legales.",
+      "section_1_title": "1. Acuerdo de Términos y Elegibilidad",
+      "section_1_text": "La Aplicación está destinada a usuarios que tienen al menos 18 años de edad. Las personas menores de 18 años no tienen permitido usar o registrarse en los Servicios.",
+      "user_representations": "Declaraciones del Usuario:",
       "user_rep_list": [
-        "Tienes 18+ años.",
-        "No usarás la app para fines ilegales."
+        "Usted tiene la capacidad legal y acepta cumplir con estos Términos Legales.",
+        "Usted no es menor de edad en la jurisdicción en la que reside.",
+        "No accederá a los Servicios a través de medios automatizados o no humanos (bots, scripts).",
+        "No utilizará los Servicios para ningún propósito ilegal o no autorizado."
       ],
-      "section_2_title": "2. Aviso de IA",
-      "section_2_text": "El contenido generado es referencial.",
-      "ai_disclaimer_title": "AVISO DE IA:",
-      "ai_disclaimer_text": "Los diseños son generados por IA y pueden no ser estructuralmente viables. Consulta a un arquitecto.",
-      "section_3_title": "3. Compras",
-      "section_3_payments": "Pagos procesados por App Store / Play Store.",
-      "section_3_subs": "Suscripciones se renuevan automáticamente.",
-      "section_3_refunds": "No hay reembolsos por créditos usados.",
-      "section_4_title": "4. Propiedad Intelectual",
-      "section_4_text": "Somos dueños del código y assets de la app.",
-      "section_5_title": "5. Contenido de Usuario",
-      "section_5_text": "Mantienes los derechos de tus fotos.",
-      "section_6_title": "6. Prohibiciones",
-      "section_6_list": ["No ingeniería inversa.", "No acoso."],
-      "section_7_title": "7. Terceros",
-      "section_7_text": "No somos responsables de enlaces externos.",
+      "section_2_title": "2. Descripción de Nuestros Servicios y Aviso de IA",
+      "section_2_text": "Love Your Home es una herramienta de diseño impulsada por IA diseñada para generar visualizaciones de diseño de interiores, renovaciones exteriores y conceptos de jardines. La Aplicación permite a los usuarios subir fotos para recibir contenido generado por IA.",
+      "ai_disclaimer_title": "AVISO IMPORTANTE DE IA:",
+      "ai_disclaimer_text": "El contenido generado es impulsado por Inteligencia Artificial. La IA puede cometer errores o 'alucinar'. No garantizamos la exactitud. Los diseños se proporcionan solo con fines de visualización y no deben usarse como planos técnicos de construcción. Usted es responsable de revisar las imágenes generadas.",
+      "section_3_title": "3. Compras y Suscripciones",
+      "section_3_payments": "Pagos: Usted acepta proporcionar información de compra actual, completa y precisa. Las transacciones son procesadas por la respectiva tienda de aplicaciones.",
+      "section_3_subs": "Suscripciones: Las suscripciones se renuevan automáticamente a menos que se cancelen al menos 24 horas antes del final del período actual.",
+      "section_3_refunds": "Cancelación y Reembolsos: Todas las compras no son reembolsables. Las solicitudes de reembolso deben realizarse a través de Apple o Google.",
+      "section_4_title": "4. Derechos de Propiedad Intelectual",
+      "section_4_text": "Poseemos todos los derechos de propiedad intelectual de nuestros Servicios. Le otorgamos un derecho revocable, no exclusivo y limitado para instalar y usar la Aplicación.",
+      "section_5_title": "5. Contribuciones Generadas por el Usuario",
+      "section_5_text": "Al publicar Contribuciones (fotos), usted nos otorga el derecho de alojarlas, usarlas y procesarlas con el fin de proporcionar los servicios de generación de IA. Usted garantiza que sus Contribuciones no infringen ningún derecho de terceros.",
+      "section_6_title": "6. Actividades Prohibidas",
+      "section_6_list": [
+        "Recuperar sistemáticamente datos para crear bases de datos.",
+        "Engañar, defraudar o confundir a otros usuarios.",
+        "Subir virus o material dañino.",
+        "Usar los Servicios para generar contenido NSFW o ilegal."
+      ],
+      "section_7_title": "7. Contenido de Terceros",
+      "section_7_text": "Los Servicios pueden contener enlaces a sitios web de terceros. No investigamos ni monitoreamos estos Contenidos de Terceros.",
       "section_8_title": "8. Terminación",
-      "section_8_text": "Podemos bloquear usuarios que violen normas.",
-      "section_9_title": "9. Cambios",
-      "section_9_text": "Los términos pueden cambiar.",
-      "section_10_title": "10. Garantía",
-      "section_10_text": "App se entrega 'TAL CUAL'.",
-      "section_11_title": "11. Responsabilidad",
-      "section_11_text": "No somos responsables de daños.",
+      "section_8_text": "Nos reservamos el derecho de denegar el acceso a los Servicios por cualquier motivo, incluido el incumplimiento de estos Términos Legales.",
+      "section_9_title": "9. Modificaciones",
+      "section_9_text": "Nos reservamos el derecho de cambiar o eliminar el contenido de los Servicios en cualquier momento.",
+      "section_10_title": "10. Renuncia de Garantías",
+      "section_10_text": "LOS SERVICIOS SE PROPORCIONAN 'TAL CUAL' Y 'SEGÚN DISPONIBILIDAD'. SU USO DE LOS SERVICIOS SERÁ BAJO SU PROPIO RIESGO.",
+      "section_11_title": "11. Limitaciones de Responsabilidad",
+      "section_11_text": "EN NINGÚN CASO SEREMOS RESPONSABLES POR DAÑOS DIRECTOS, INDIRECTOS, CONSECUENTES, EJEMPLARES, INCIDENTALES, ESPECIALES O PUNITIVOS.",
       "section_12_title": "12. Indemnización",
-      "section_12_text": "Nos eximes de responsabilidad.",
-      "section_13_title": "13. Privacidad",
-      "section_13_text": "Ver Política de Privacidad.",
-      "section_14_title": "14. Comunicaciones",
-      "section_14_text": "Aceptas correos electrónicos.",
-      "section_15_title": "15. Ley",
-      "section_15_text": "Leyes de Delaware.",
-      "section_16_title": "16. Disputas",
-      "section_16_text": "Arbitraje.",
+      "section_12_text": "Usted acepta defender, indemnizar y eximirnos de responsabilidad por cualquier pérdida, daño, responsabilidad, reclamo o demanda.",
+      "section_13_title": "13. Política de Privacidad y Datos del Usuario",
+      "section_13_text": "Nos preocupamos por la privacidad y seguridad de los datos. Revise nuestra Política de Privacidad, que se incorpora a estos Términos Legales.",
+      "section_14_title": "14. Comunicaciones Electrónicas",
+      "section_14_text": "Usted da su consentimiento para recibir comunicaciones electrónicas y acepta que todos los acuerdos, avisos, divulgaciones y otras comunicaciones que le proporcionemos electrónicamente satisfacen cualquier requisito legal.",
+      "section_15_title": "15. Ley Aplicable",
+      "section_15_text": "Estos Términos Legales se rigen por las leyes del Estado de Delaware (Estados Unidos).",
+      "section_16_title": "16. Resolución de Disputas",
+      "section_16_text": "Las disputas se resolverán mediante arbitraje vinculante en Delaware.",
       "section_17_title": "17. Varios",
-      "section_17_text": "Cláusulas varias.",
-      "section_18_title": "18. Contacto"
+      "section_17_text": "Estos Términos Legales constituyen el acuerdo completo. Si alguna disposición se determina ilegal, dicha disposición se considera divisible.",
+      "section_18_title": "18. Contáctenos"
     },
     "privacy": {
-      "intro": "Política de Privacidad de <bold>{{appName}}</bold>.",
-      "section_1_title": "1. Recolección",
-      "section_1_a": "Datos que das",
-      "section_1_a_list": ["Fotos", "Email"],
-      "section_1_b": "Datos automáticos",
-      "section_1_b_list": ["Datos de uso"],
-      "section_2_title": "2. Uso",
-      "section_2_list": ["Proveer servicio", "Mejorar app"],
-      "section_3_title": "3. Compartir",
-      "section_3_text": "Solo con proveedores de IA para procesar.",
-      "section_4_title": "4. Retención",
-      "section_4_list": ["Fotos fuente borradas tras proceso."],
-      "section_5_title": "5. Seguridad",
-      "section_5_text": "Medidas estándar aplicadas.",
-      "section_6_title": "6. Borrado",
-      "section_6_text": "Solicitar en la app.",
-      "section_7_title": "7. Niños",
-      "section_7_text": "No para menores de 18.",
-      "section_8_title": "8. Cambios",
-      "section_8_text": "Se notificarán actualizaciones.",
-      "section_9_title": "9. Contacto"
+      "intro": "Esta Política de Privacidad explica cómo ADSEGOM LTD recopila, usa y divulga información sobre usted cuando usa Love Your Home.",
+      "section_1_title": "1. Información que Recopilamos",
+      "section_1_a": "a. Información que Usted Proporciona",
+      "section_1_a_list": [
+        "Contenido del Usuario: Fotos de habitaciones o espacios que sube para procesamiento de IA."
+      ],
+      "section_1_b": "b. Información Recopilada Automáticamente",
+      "section_1_b_list": [
+        "Datos de Uso: Funciones utilizadas, frecuencia.",
+        "Información del Dispositivo: Modelo, versión del sistema operativo.",
+        "Identificadores Anónimos: IDs de usuario de la App para gestión de suscripciones."
+      ],
+      "section_2_title": "2. Cómo Usamos Su Información",
+      "section_2_list": [
+        "Proporcionar y mejorar la Aplicación.",
+        "Procesar Solicitudes de IA: Para generar estilos de diseño interior y exterior según lo solicitado.",
+        "Uso de Imágenes: Usamos los datos en sus fotos subidas únicamente para aplicar los efectos de diseño de IA que solicite. No usamos estos datos para autenticación o seguimiento.",
+        "Los datos se comparten con proveedores de IA solo durante la duración del proceso de generación.",
+        "Gestionar cuentas y suscripciones.",
+        "Responder a solicitudes de soporte."
+      ],
+      "section_3_title": "3. Cómo Compartimos Su Información",
+      "section_3_text": "No vendemos sus datos personales. Compartimos datos solo con Proveedores de IA (para procesamiento), Infraestructura Backend (para almacenamiento) y para Requisitos Legales.",
+      "section_4_title": "4. Procesamiento y Retención de Imágenes",
+      "section_4_list": [
+        "Las imágenes se convierten y envían a proveedores de IA de forma segura.",
+        "Retención: NO almacenamos permanentemente sus imágenes fuente después del procesamiento.",
+        "Política de Datos: No vendemos, comercializamos ni transferimos sus datos de imagen a terceros.",
+        "Retenemos información de cuenta anónima mientras esté activa."
+      ],
+      "section_5_title": "5. Seguridad de Datos",
+      "section_5_text": "Utilizamos medidas de seguridad estándar de la industria. Sin embargo, ninguna transmisión por internet es 100% segura.",
+      "section_6_title": "6. Eliminación de Datos",
+      "section_6_text": "Puede solicitar la eliminación de su cuenta y datos dentro de la aplicación o contactándonos.",
+      "section_7_title": "7. Privacidad de los Niños",
+      "section_7_text": "La Aplicación no está destinada a niños menores de 18 años. No recopilamos información de niños a sabiendas.",
+      "section_8_title": "8. Cambios en la Política",
+      "section_8_text": "Podemos actualizar esta política. Le notificaremos sobre los cambios.",
+      "section_9_title": "9. Contáctenos"
     }
   },
   "profile": {
