--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -116,80 +116,105 @@
   "legal": {
     "terms_title": "Termos de Serviço",
     "privacy_title": "Política de Privacidade",
-    "last_updated": "Última atualização: 28 de Novembro, 2025",
+    "last_updated": "Última atualização: 21 de Dezembro de 2025",
     "data_secure": "Seus dados estão seguros",
     "company_name": "ADSEGOM LTD",
     "app_name": "Love Your Home",
     "contact_email": "info@rizzflows.com",
     "terms": {
-      "intro": "Bem-vindo ao <bold>{{appName}}</bold>. Estes termos regem o uso do App.",
-      "section_1_title": "1. Acordo",
-      "section_1_text": "Ao usar o app, você concorda com estes termos.",
-      "user_representations": "Declarações:",
+      "intro": "Bem-vindo ao Love Your Home, um aplicativo móvel operado pela ADSEGOM LTD ('Empresa', 'nós', 'nosso'). Estes Termos de Serviço (os 'Termos Legais') regem seu acesso e uso do Aplicativo. Ao usar os Serviços, você concorda em ficar vinculado a estes Termos Legais.",
+      "section_1_title": "1. Acordo sobre os Termos e Elegibilidade",
+      "section_1_text": "O Aplicativo destina-se a usuários com pelo menos 18 anos de idade. Pessoas menores de 18 anos não têm permissão para usar ou se registrar nos Serviços.",
+      "user_representations": "Declarações do Usuário:",
       "user_rep_list": [
-        "Você tem 18+ anos.",
-        "Não usará o app para fins ilegais."
+        "Você tem capacidade legal e concorda em cumprir estes Termos Legais.",
+        "Você não é menor de idade na jurisdição em que reside.",
+        "Você não acessará os Serviços por meios automatizados ou não humanos (bots, scripts).",
+        "Você não usará os Serviços para qualquer finalidade ilegal ou não autorizada."
       ],
-      "section_2_title": "2. Aviso de IA",
-      "section_2_text": "Conteúdo gerado é referencial.",
-      "ai_disclaimer_title": "AVISO IA:",
-      "ai_disclaimer_text": "Projetos são gerados por IA e podem não ser estruturalmente viáveis. Consulte um arquiteto.",
-      "section_3_title": "3. Compras",
-      "section_3_payments": "Processado pela App Store / Play Store.",
-      "section_3_subs": "Renovação automática.",
-      "section_3_refunds": "Sem reembolso para créditos usados.",
-      "section_4_title": "4. Propriedade Intelectual",
-      "section_4_text": "Somos donos do código.",
-      "section_5_title": "5. Conteúdo do Usuário",
-      "section_5_text": "Você mantém direitos sobre suas fotos.",
-      "section_6_title": "6. Proibições",
-      "section_6_list": ["Sem engenharia reversa.", "Sem assédio."],
-      "section_7_title": "7. Terceiros",
-      "section_7_text": "Links externos não são nossa responsabilidade.",
+      "section_2_title": "2. Descrição dos Nossos Serviços e Aviso de IA",
+      "section_2_text": "Love Your Home é uma ferramenta de design alimentada por IA projetada para gerar visualizações de design de interiores, renovações exteriores e conceitos de jardins. O Aplicativo permite que os usuários enviem fotos para receber conteúdo gerado por IA.",
+      "ai_disclaimer_title": "AVISO IMPORTANTE DE IA:",
+      "ai_disclaimer_text": "O conteúdo gerado é alimentado por Inteligência Artificial. A IA pode cometer erros ou 'alucinar'. Não garantimos a precisão. Os projetos são fornecidos apenas para fins de visualização e não devem ser usados como planos técnicos de construção. Você é responsável por revisar as imagens geradas.",
+      "section_3_title": "3. Compras e Assinaturas",
+      "section_3_payments": "Pagamentos: Você concorda em fornecer informações de compra atuais, completas e precisas. As transações são processadas pela respectiva loja de aplicativos.",
+      "section_3_subs": "Assinaturas: As assinaturas são renovadas automaticamente, a menos que sejam canceladas pelo menos 24 horas antes do final do período atual.",
+      "section_3_refunds": "Cancelamento e Reembolsos: Todas as compras não são reembolsáveis. As solicitações de reembolso devem ser feitas através da Apple ou Google.",
+      "section_4_title": "4. Direitos de Propriedade Intelectual",
+      "section_4_text": "Detemos todos os direitos de propriedade intelectual dos nossos Serviços. Concedemos a você um direito revogável, não exclusivo e limitado para instalar e usar o Aplicativo.",
+      "section_5_title": "5. Contribuições Geradas pelo Usuário",
+      "section_5_text": "Ao publicar Contribuições (fotos), você nos concede o direito de hospedá-las, usá-las e processá-las com a finalidade de fornecer os serviços de geração de IA. Você garante que suas Contribuições não infringem quaisquer direitos de terceiros.",
+      "section_6_title": "6. Atividades Proibidas",
+      "section_6_list": [
+        "Recuperar sistematicamente dados para criar bancos de dados.",
+        "Enganar, fraudar ou induzir outros usuários ao erro.",
+        "Enviar vírus ou material prejudicial.",
+        "Usar os Serviços para gerar conteúdo NSFW ou ilegal."
+      ],
+      "section_7_title": "7. Conteúdo de Terceiros",
+      "section_7_text": "Os Serviços podem conter links para sites de terceiros. Não investigamos nem monitoramos esses Conteúdos de Terceiros.",
       "section_8_title": "8. Rescisão",
-      "section_8_text": "Podemos banir usuários.",
-      "section_9_title": "9. Alterações",
-      "section_9_text": "Termos podem mudar.",
-      "section_10_title": "10. Garantia",
-      "section_10_text": "App fornecido 'COMO ESTÁ'.",
-      "section_11_title": "11. Responsabilidade",
-      "section_11_text": "Não somos responsáveis por danos.",
+      "section_8_text": "Reservamo-nos o direito de negar o acesso aos Serviços por qualquer motivo, incluindo violação destes Termos Legais.",
+      "section_9_title": "9. Modificações",
+      "section_9_text": "Reservamo-nos o direito de alterar ou remover o conteúdo dos Serviços a qualquer momento.",
+      "section_10_title": "10. Isenção de Garantias",
+      "section_10_text": "OS SERVIÇOS SÃO FORNECIDOS 'COMO ESTÃO' E 'CONFORME DISPONÍVEIS'. O USO DOS SERVIÇOS SERÁ POR SUA CONTA E RISCO.",
+      "section_11_title": "11. Limitações de Responsabilidade",
+      "section_11_text": "EM NENHUMA CIRCUNSTÂNCIA SEREMOS RESPONSÁVEIS POR QUAISQUER DANOS DIRETOS, INDIRETOS, CONSEQUENCIAIS, EXEMPLARES, ACIDENTAIS, ESPECIAIS OU PUNITIVOS.",
       "section_12_title": "12. Indenização",
-      "section_12_text": "Você concorda em nos isentar.",
-      "section_13_title": "13. Privacidade",
-      "section_13_text": "Ver Política.",
-      "section_14_title": "14. Comunicações",
-      "section_14_text": "E-mails aceitos.",
-      "section_15_title": "15. Lei",
-      "section_15_text": "Lei de Delaware.",
-      "section_16_title": "16. Disputas",
-      "section_16_text": "Arbitragem.",
+      "section_12_text": "Você concorda em nos defender, indenizar e isentar de responsabilidade por qualquer perda, dano, responsabilidade, reivindicação ou demanda.",
+      "section_13_title": "13. Política de Privacidade e Dados do Usuário",
+      "section_13_text": "Preocupamo-nos com a privacidade e segurança dos dados. Revise nossa Política de Privacidade, que está incorporada a estes Termos Legais.",
+      "section_14_title": "14. Comunicações Eletrônicas",
+      "section_14_text": "Você consente em receber comunicações eletrônicas e concorda que todos os acordos, avisos, divulgações e outras comunicações que fornecemos a você eletronicamente satisfazem qualquer requisito legal.",
+      "section_15_title": "15. Lei Aplicável",
+      "section_15_text": "Estes Termos Legais são regidos pelas leis do Estado de Delaware (Estados Unidos).",
+      "section_16_title": "16. Resolução de Disputas",
+      "section_16_text": "As disputas serão resolvidas por arbitragem vinculativa em Delaware.",
       "section_17_title": "17. Diversos",
-      "section_17_text": "Termos gerais.",
-      "section_18_title": "18. Contato"
+      "section_17_text": "Estes Termos Legais constituem o acordo integral. Se qualquer disposição for considerada ilegal, essa disposição será considerada separável.",
+      "section_18_title": "18. Contate-nos"
     },
     "privacy": {
-      "intro": "Política de Privacidade para <bold>{{appName}}</bold>.",
-      "section_1_title": "1. Coleta",
-      "section_1_a": "Dados que você fornece",
-      "section_1_a_list": ["Fotos", "Email"],
-      "section_1_b": "Coleta automática",
-      "section_1_b_list": ["Dados de uso"],
-      "section_2_title": "2. Uso",
-      "section_2_list": ["Provisão de serviço", "Melhoria"],
-      "section_3_title": "3. Compartilhamento",
-      "section_3_text": "Apenas com provedores de IA.",
-      "section_4_title": "4. Retenção",
-      "section_4_list": ["Fotos fonte deletadas após processo."],
-      "section_5_title": "5. Segurança",
-      "section_5_text": "Medidas padrão aplicadas.",
-      "section_6_title": "6. Exclusão",
-      "section_6_text": "Solicitar no app.",
-      "section_7_title": "7. Crianças",
-      "section_7_text": "Não para menores de 18.",
-      "section_8_title": "8. Alterações",
-      "section_8_text": "Notificaremos atualizações.",
-      "section_9_title": "9. Contato"
+      "intro": "Esta Política de Privacidade explica como a ADSEGOM LTD coleta, usa e divulga informações sobre você quando você usa o Love Your Home.",
+      "section_1_title": "1. Informações que Coletamos",
+      "section_1_a": "a. Informações que Você Fornece",
+      "section_1_a_list": [
+        "Conteúdo do Usuário: Fotos de cômodos ou espaços que você envia para processamento de IA."
+      ],
+      "section_1_b": "b. Informações Coletadas Automaticamente",
+      "section_1_b_list": [
+        "Dados de Uso: Recursos usados, frequência.",
+        "Informações do Dispositivo: Modelo, versão do sistema operacional.",
+        "Identificadores Anônimos: IDs de Usuário do App para gerenciamento de assinaturas."
+      ],
+      "section_2_title": "2. Como Usamos Suas Informações",
+      "section_2_list": [
+        "Fornecer e melhorar o Aplicativo.",
+        "Processar Solicitações de IA: Para gerar estilos de design de interiores e exteriores conforme solicitado.",
+        "Uso de Imagens: Usamos os dados em suas fotos enviadas exclusivamente para aplicar os efeitos de design de IA que você solicita. Não usamos esses dados para autenticação ou rastreamento.",
+        "Os dados são compartilhados com provedores de IA apenas durante o processo de geração.",
+        "Gerenciar contas e assinaturas.",
+        "Responder a solicitações de suporte."
+      ],
+      "section_3_title": "3. Como Compartilhamos Suas Informações",
+      "section_3_text": "Não vendemos seus dados pessoais. Compartilhamos dados apenas com Provedores de IA (para processamento), Infraestrutura de Backend (para armazenamento) e para Requisitos Legais.",
+      "section_4_title": "4. Processamento e Retenção de Imagens",
+      "section_4_list": [
+        "As imagens são convertidas e enviadas para provedores de IA com segurança.",
+        "Retenção: NÃO armazenamos permanentemente suas imagens de origem após o processamento.",
+        "Política de Dados: Não vendemos, negociamos ou transferimos seus dados de imagem para terceiros.",
+        "Retemos informações de conta anônimas enquanto ativas."
+      ],
+      "section_5_title": "5. Segurança de Dados",
+      "section_5_text": "Utilizamos medidas de segurança padrão do setor. No entanto, nenhuma transmissão pela internet é 100% segura.",
+      "section_6_title": "6. Exclusão de Dados",
+      "section_6_text": "Você pode solicitar a exclusão de sua conta e dados dentro do aplicativo ou entrando em contato conosco.",
+      "section_7_title": "7. Privacidade de Crianças",
+      "section_7_text": "O Aplicativo não se destina a crianças menores de 18 anos. Não coletamos intencionalmente informações de crianças.",
+      "section_8_title": "8. Alterações na Política",
+      "section_8_text": "Podemos atualizar esta política. Notificaremos você sobre alterações.",
+      "section_9_title": "9. Contate-Nos"
     }
   },
   "profile": {
